<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main3Activity">


    <TextView
        android:layout_margin="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Text"
        android:textSize="30sp"
        android:textStyle="bold"

        />
    <CheckBox
        android:id="@+id/ironMan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox1"
        android:textSize="25sp"
        android:textStyle="italic"

        />



    <CheckBox
        android:id="@+id/spiderman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox3"
        android:textSize="25sp"
        android:textStyle="italic"

        />





</LinearLayout>