<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Main8Activity">



    <TextView
        android:layout_margin="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Text"
        android:textSize="30sp"
        android:textStyle="bold"

        />
    <CheckBox
        android:id="@+id/superman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox4"
        android:textSize="25sp"
        android:textStyle="italic"

        />
    <CheckBox
        android:id="@+id/hulk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox2"
        android:textSize="25sp"
        android:textStyle="italic"

        />


</LinearLayout>